PROJECT(AUTOSEG)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
CMAKE_POLICY(VERSION 2.8.2)

IF(CMAKE_COMPILER_2005)
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
ENDIF(CMAKE_COMPILER_2005)

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR} CACHE PATH "Install path prefix, prepended onto install directories." FORCE)
set(CMAKE_HELPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
include(ExternalProject)
include(${CMAKE_HELPER_DIR}/CMakeBuildMacros.cmake)
include(${CMAKE_HELPER_DIR}/PreventInSourceBuilds.cmake)
include(${CMAKE_HELPER_DIR}/CMakeCommonExternalDefinitions.cmake)

SETIFEMPTY(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SETIFEMPTY(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SETIFEMPTY(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SETIFEMPTY(CMAKE_BUNDLE_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/bin)

#-----------------------------------------------------------------------------
# Git protocole option
#-----------------------------------------------------------------------------
option(USE_GIT_PROTOCOL "If behind a firewall turn this off to use http
instead." ON)
set(git_protocol "git")
if(NOT USE_GIT_PROTOCOL)
  set(git_protocol "http")
endif()

set(LOCAL_CMAKE_BUILD_OPTIONS
  -DMAKECOMMAND:STRING=${MAKECOMMAND}
  -DCMAKE_SKIP_RPATH:BOOL=ON
  -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
  -DCMAKE_CXX_FLAGS_RELEASE:STRING=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_DEBUG:STRING=${CMAKE_CXX_FLAGS_DEBUG}
  -DCMAKE_CXX_FLAGS:STRING=${CMAKE_CXX_FLAGS}
  -DCMAKE_C_FLAGS_RELEASE:STRING=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_C_FLAGS_DEBUG:STRING=${CMAKE_C_FLAGS_DEBUG}
  -DCMAKE_C_FLAGS:STRING=${CMAKE_C_FLAGS}
  -DCMAKE_C_COMPILER:STRING=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_COMPILER:STRING=${CMAKE_CXX_COMPILER}
  -DBUILD_EXAMPLES:BOOL=OFF
  -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
  -DBUILD_TESTING:BOOL=${BUILD_TESTING}
  -DCMAKE_GENERATOR:STRING=${CMAKE_GENERATOR}
  -DCMAKE_EXTRA_GENERATOR:STRING=${CMAKE_EXTRA_GENERATOR}
  -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
  -DCMAKE_LIBRARY_OUTPUT_DIRECTORY:PATH=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
  -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY:PATH=${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
  -DCMAKE_RUNTIME_OUTPUT_DIRECTORY:PATH=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
  -DCMAKE_BUNDLE_OUTPUT_DIRECTORY:PATH=${CMAKE_BUNDLE_OUTPUT_DIRECTORY}
  -DLIBRARY_OUTPUT_PATH:PATH=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
  -DEXECUTABLE_OUTPUT_PATH:PATH=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
  -DDART_TESTING_TIMEOUT:STRING=${DART_TESTING_TIMEOUT}
  -DMEMORYCHECK_COMMAND_OPTIONS:STRING=${MEMORYCHECK_COMMAND_OPTIONS}
  -DMEMORYCHECK_COMMAND:PATH=${MEMORYCHECK_COMMAND}
  -DCMAKE_SHARED_LINKER_FLAGS:STRING=${CMAKE_SHARED_LINKER_FLAGS}
  -DCMAKE_EXE_LINKER_FLAGS:STRING=${CMAKE_EXE_LINKER_FLAGS}
  -DCMAKE_MODULE_LINKER_FLAGS:STRING=${CMAKE_MODULE_LINKER_FLAGS}
  -DSITE:STRING=${SITE}
  -DBUILDNAME:STRING=${BUILDNAME}
)


#External Projects
include(ExternalProject)
if(CMAKE_EXTRA_GENERATOR)
  set(gen "${CMAKE_EXTRA_GENERATOR} - ${CMAKE_GENERATOR}")
else()
  set(gen "${CMAKE_GENERATOR}")
endif()

PACKAGE_NEEDS_ITK("${LOCAL_CMAKE_BUILD_OPTIONS}" "${gen}")
PACKAGE_NEEDS_VTK_NOGUI("${LOCAL_CMAKE_BUILD_OPTIONS}" "${gen}")
PACKAGE_NEEDS_SlicerExecutionModel("${LOCAL_CMAKE_BUILD_OPTIONS}" "${gen}")
PACKAGE_NEEDS_BatchMake("${LOCAL_CMAKE_BUILD_OPTIONS}" "${gen}")
PACKAGE_NEEDS_FLTK("${LOCAL_CMAKE_BUILD_OPTIONS}" "${gen}")

OPTION(COMPILE_EXTERNAL_NIRAL_UTILITIES "Compile NIRALUtilities." ON)
IF(COMPILE_EXTERNAL_NIRAL_UTILITIES)
  OPTION(COMPILE_EXTERNAL_CONVERTITKFORMATS "Compile ConvertITKformats." ON)
  OPTION(COMPILE_EXTERNAL_IMAGESTAT "Compile ImageStat." ON)
  OPTION(COMPILE_EXTERNAL_IMAGEMATH "Compile ImageMath." ON)
  OPTION(COMPILE_EXTERNAL_INTENSITYRESCALER "Compile IntensityRescaler." OFF)
  if( COMPILE_EXTERNAL_INTENSITYRESCALER )
    find_package( Qt REQUIRED )
    if( NOT QT_FOUND )
      message( FATAL_ERROR "Qt not found" )
    endif()
  endif()
  set(proj NIRALUtilities)
  set( ${proj}_REPOSITORY ${git_protocol}://github.com/NIRALUser/niral_utilities.git )
  set( ${proj}_GIT_TAG debff5f9fbf41f7508e5d3988c33e56dee5cdcc6 )
  ExternalProject_Add(${proj}
    GIT_REPOSITORY ${${proj}_REPOSITORY}
    GIT_TAG ${${proj}_GIT_TAG}
    SOURCE_DIR ${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND} ${VTK_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      ${LOCAL_CMAKE_BUILD_OPTIONS}
      -DITK_DIR:PATH=${ITK_DIR}
      -DVTK_DIR:PATH=${VTK_DIR}
      -DCOMPILE_CONVERTITKFORMATS:BOOL=${COMPILE_EXTERNAL_CONVERTITKFORMATS}
      -DCOMPILE_IMAGESTAT:BOOL=${COMPILE_EXTERNAL_IMAGESTAT}
      -DCOMPILE_IMAGEMATH:BOOL=${COMPILE_EXTERNAL_IMAGEMATH}
      -DCOMPILE_IntensityRescaler:BOOL=${COMPILE_EXTERNAL_INTENSITYRESCALER}
      -DCOMPILE_Unsupported:BOOL=ON
      -DCOMPILE_TRANSFORMDEFORMATIONFIELD:BOOL=OFF
      -DCOMPILE_CROPTOOLS:BOOL=OFF
      -DQT_QMAKE_EXECUTABLE:FILEPATH=${QT_QMAKE_EXECUTABLE}
      -DCOMPILE_DWI_NIFTINRRDCONVERSION:BOOL=OFF
      -DCOMPILE_POLYDATATRANSFORM:BOOL=OFF
      -DCOMPILE_POLYDATAMERGE:BOOL=OFF
      -DCOMPILE_CURVECOMPARE:BOOL=OFF
      -DCOMPILE_DTIAtlasBuilder:BOOL=OFF
    INSTALL_COMMAND ""
    INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
  )
  FORCE_BUILD_CHECK(${proj})
ENDIF(COMPILE_EXTERNAL_NIRAL_UTILITIES)

OPTION(COMPILE_EXTERNAL_CORTTHICK "Compile CortThick." ON)
IF(COMPILE_EXTERNAL_CORTTHICK)
  set(proj CortThick)
  set( ${proj}_REPOSITORY ${git_protocol}://github.com/NIRALUser/ARCTIC.git )
  set( ${proj}_GIT_TAG 69e47557717a3d95726bb550c31d2b7e9c4fcbb2 )
  ExternalProject_Add(${proj}
    GIT_REPOSITORY ${${proj}_REPOSITORY}
    GIT_TAG ${${proj}_GIT_TAG}
    SOURCE_DIR ${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND} ${SlicerExecutionModel_DEPEND} ${VTK_DEPEND} ${BatchMake_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      ${LOCAL_CMAKE_BUILD_OPTIONS}
      -DITK_DIR:PATH=${ITK_DIR}
      -DSlicerExecutionModel_DIR:PATH=${SlicerExecutionModel_DIR}
      -DVTK_DIR:PATH=${VTK_DIR}
      -DBatchMake_DIR:PATH=${BatchMake_DIR}
      -DCOMPILE_ImageMath:BOOL=OFF
      -DCOMPILE_ImageStat:BOOL=OFF
      -DCOMPILE_ITKEMS:BOOL=OFF
      -DCOMPILE_SegPostProcess:BOOL=OFF
    INSTALL_COMMAND ""
    INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
  )
  FORCE_BUILD_CHECK(${proj})
ENDIF(COMPILE_EXTERNAL_CORTTHICK)

OPTION(COMPILE_EXTERNAL_SEGPOSTPROCESSCLP "Compile SegPostProcessCLP." ON)
IF(COMPILE_EXTERNAL_SEGPOSTPROCESSCLP)
  set(proj SegPostProcessCLP)
  set( ${proj}_REPOSITORY ${git_protocol}://github.com/NIRALUser/SPHARM-PDM.git )
  set( ${proj}_GIT_TAG d7b3ce71b58d4e4ebacd153315fd6c957cf183b0 )
  ExternalProject_Add(${proj}
    GIT_REPOSITORY ${${proj}_REPOSITORY}
    GIT_TAG ${${proj}_GIT_TAG}
    SOURCE_DIR ${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND} ${SlicerExecutionModel_DEPEND} ${VTK_DEPEND} ${BatchMake_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      ${LOCAL_CMAKE_BUILD_OPTIONS}
      -DGenerateCLP_DIR:PATH=${GenerateCLP_DIR}
      -DITK_DIR:PATH=${ITK_DIR}
      -DVTK_DIR:PATH=${VTK_DIR}
      -DBatchMake_DIR:PATH=${BatchMake_DIR}
      -DCOMPILE_ImageMath:BOOL=OFF
      -DCOMPILE_MetaMeshTools:BOOL=OFF
      -DCOMPILE_SegPostProcessCLP:BOOL=ON
      -DCOMPILE_GenParaMeshCLP:BOOL=OFF
      -DCOMPILE_RadiusToMesh:BOOL=OFF
      -DCOMPILE_ParaToSPHARMMeshCLP:BOOL=OFF
      -DCOMPILE_ShapeAnalysisModule:BOOL=OFF
      -DCOMPILE_SpharmTool:BOOL=OFF
      -DCOMPILE_shapeAnalysisMANCOVA_Wizard:BOOL=OFF
      -DCOMPILE_StatNonParamTestPDM:BOOL=OFF
      -DCOMPILE_shapeworks:BOOL=OFF
      -DCOMPILE_ParticleModule:BOOL=OFF
      -DBUILD_LIBRARIES:BOOL=OFF
      -DSPHARM-PDM_SUPERBUILD:BOOL=OFF
    INSTALL_COMMAND ""
    INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
  )
  FORCE_BUILD_CHECK(${proj})
ENDIF(COMPILE_EXTERNAL_SEGPOSTPROCESSCLP)

OPTION(COMPILE_EXTERNAL_ABC "Compile External ABC." ON)
IF(COMPILE_EXTERNAL_ABC)
  set(proj abc)
  set( ${proj}_REPOSITORY ${git_protocol}://github.com/NIRALUser/ABC.git )
  set( ${proj}_GIT_TAG 99dc70a8fdf4ab87db049a89cff309393712a62b )
  ExternalProject_Add(${proj}
    GIT_REPOSITORY ${${proj}_REPOSITORY}
    GIT_TAG ${${proj}_GIT_TAG}
    SOURCE_DIR ${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      ${LOCAL_CMAKE_BUILD_OPTIONS}
      -DGenerateCLP_DIR:PATH=${GenerateCLP_DIR}
      -DITK_DIR:PATH=${ITK_DIR}
      -DCOMPILE_SLICER4COMMANDLINE:BOOL=OFF
      -DCOMPILE_BRAINSEG:BOOL=OFF
      -DCOMPILE_STANDALONEGUI:BOOL=OFF
      -DCOMPILE_COMMANDLINE:BOOL=ON
      -DABC_CLI_NO_SUFFIX:BOOL=ON
    INSTALL_COMMAND ""
   )
ENDIF(COMPILE_EXTERNAL_ABC)

OPTION(COMPILE_AUTOSEG "Compile AutoSeg." ON)
IF(COMPILE_AUTOSEG)
  set(proj AutoSeg)
  ExternalProject_Add(${proj}
    DOWNLOAD_COMMAND ""
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${proj}
    BINARY_DIR ${proj}-build
    DEPENDS ${ITK_DEPEND} ${BatchMake_DEPEND} ${FLTK_DEPEND}
    CMAKE_GENERATOR ${gen}
    CMAKE_ARGS
      ${LOCAL_CMAKE_BUILD_OPTIONS}
      -DITK_DIR:PATH=${ITK_DIR}
      -DFLTK_DIR:PATH=${FLTK_DIR}
      -DBatchMake_DIR:PATH=${BatchMake_DIR}
    INSTALL_COMMAND ""
    INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
  )
  FORCE_BUILD_CHECK(${proj})
ENDIF(COMPILE_AUTOSEG)
